# Alch

./: README.md  conftest.py  git_push.sh  output.json  poetry.toml  pyproject.toml  pytest.ini  pytest_html_report.html  report2.html
archive/: output_1706506256.6358778.json  output_1706506442.0867558.json  output_1706506573.6783671.json  output_1706506646.39757.json  output_1706523811.5472565.json  output_1706533672.040109.json  output_1706533792.3016279.json  output_1706533847.69415.json  output_1706534194.6527758.json  output_1706536536.6626809.json  output_1706536547.2704935.json  output_1706536560.1739767.json  output_1706582700.058208.json  output_1706582727.6793332.json  output_1706582738.8545623.json  output_1706582750.1429236.json  output_1706583273.0750735.json  output_1706583288.643321.json  output_1706583343.7445104.json  output_1706586789.9401858.json  output_1706598110.126746.json  output_1706598115.4838943.json  output_1706598220.3739507.json  output_1706598245.7232347.json  output_1706598304.930519.json  output_1706598409.0467896.json  output_1706598434.472103.json  output_1706598566.0379963.json  output_1706598829.3205988.json  output_1706598845.1967561.json  output_1706598860.9012213.json  output_1706599292.429797.json  output_1706599353.2531614.json  output_1706599379.1532671.json  output_1706601236.007329.json  output_1706601313.2898948.json  output_1706601334.09051.json  output_1706601346.8947465.json  output_1706601413.785907.json  output_1706601616.4280734.json  (+1086 more)
deployment/: gitt.yaml  jenkins.jenkins
marinaalchemist/: __init__.py
(+43 files in other folders)
