[tool.poetry]
name = "marinaalchemist"
version = "0.1.0"
description = ""
authors = ["Ajay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
allure-pytest = "^2.13.2"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
docker = "^7.0.0"
pydicom = "^2.4.4"
pytest-html = "^4.1.1"
pytest-html-reporter = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
